# tree-sitter-tolk

./: .editorconfig  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  main.tolk  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-tolk.h  tree-sitter-tolk.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  binding_test.js  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tolk/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTolkTests/: TreeSitterTolkTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: enums.txt  functions.test.txt  generics.test.txt  lamdas.test.txt  matching.test.txt  op-priority.test.txt  simple.test.txt  structs.test.txt  types.test.txt
