[package]
name = "tree-sitter-tolk"
description = "Tolk grammar for tree-sitter"
version = "0.4.5"
authors = ["TON Core"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "tolk"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/ton-blockchain/tree-sitter-tolk"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
